# wavsynth

./: .gitignore  README.md
project/: CMakeLists.txt
project/wavlib/: CMakeLists.txt
project/wavlib/include/: fourier_synth.h  karplus_strong.h  sawtooth_wave.h  sine_wave.h  square_wave.h  wav_ostream.h  wave_generator.h  wavlib.h
project/wavlib/include/waves/: sampler.h  sawtooth_wave.h  sine_wave.h  square_wave.h  wave_generator.h  white_noise.h
project/wavlib/src/: fourier_synth.cpp  karplus_strong.cpp  sawtooth_wave.cpp  sine_wave.cpp  square_wave.cpp  wav_ostream.cpp  wavlib.cpp
project/wavlib/src/waves/: sampler.cpp  sawtooth_wave.cpp  sine_wave.cpp  square_wave.cpp  white_noise.cpp
project/wavlib/test/: hellolib_test.cpp
project/wavsynth/: CMakeLists.txt
project/wavsynth/src/: wavsynth.cpp
